iptables.conf
# Generated by iptables-save v1.4.21 on Tue Aug 11 23:09:22 2020
*nat
:PREROUTING ACCEPT [13680320:3043095433]
:INPUT ACCEPT [733540:117412733]
:OUTPUT ACCEPT [12301:907290]
:POSTROUTING ACCEPT [12776:931322]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 10.9.0.0/24 -o tun2 -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -o tun2 -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 172.17.0.3:8080
COMMIT
# Completed on Tue Aug 11 23:09:22 2020
# Generated by iptables-save v1.4.21 on Tue Aug 11 23:09:22 2020
*mangle
:PREROUTING ACCEPT [144556879:60795679736]
:INPUT ACCEPT [47201708:24573234118]
:FORWARD ACCEPT [35814525:21400747504]
:OUTPUT ACCEPT [28076383:19875738964]
:POSTROUTING ACCEPT [63890837:41276482163]
COMMIT
# Completed on Tue Aug 11 23:09:22 2020
# Generated by iptables-save v1.4.21 on Tue Aug 11 23:09:22 2020
*security
:INPUT ACCEPT [47201708:24573234118]
:FORWARD ACCEPT [35814454:21400743199]
:OUTPUT ACCEPT [28076383:19875738964]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
COMMIT
# Completed on Tue Aug 11 23:09:22 2020
# Generated by iptables-save v1.4.21 on Tue Aug 11 23:09:22 2020
*raw
:PREROUTING ACCEPT [144556879:60795679736]
:OUTPUT ACCEPT [28076383:19875738964]
COMMIT
# Completed on Tue Aug 11 23:09:22 2020
# Generated by iptables-save v1.4.21 on Tue Aug 11 23:09:22 2020
*filter
:INPUT ACCEPT [23992950:17807132984]
:FORWARD ACCEPT [21420299:16100580274]
:OUTPUT ACCEPT [21496195:17259201994]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:INPUT_direct - [0:0]
-A DOCKER -d 172.17.0.3/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 8080 -j ACCEPT
COMMIT
# Completed on Tue Aug 11 23:09:22 2020
